kubernetes/netbird-operator/addl/GatewayApi/gateway-priv.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  namespace: netbird
spec:
  gatewayClassName: netbird-private
  listeners:
  - protocol: gateway.netbird.io/NBRoutingPeer
    name: netbird-proxy-priv
    port: 1
