kubernetes/netbird-operator/addl/GatewayApi/gateway-pub.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: netbird
spec:
  gatewayClassName: netbird-public
  listeners:
  - protocol: gateway.netbird.io/NetworkRouter
    name: netbird-proxy-pub
    port: 1
