kubernetes/netbird-operator/addl/GatewayApi/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-nb-k8s
  namespace: default
  labels:
    app: demo-nb-k8s
spec:
  hostnames:
    # Optional: omit this field if you don't want to expose this through the reverse proxy
    - my-demo-nb-k8s.eu1.netbird.services
  parentRefs:
  - name: public
    namespace: netbird
  rules:
  - backendRefs:
    - name: demo-nb-k8s
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nb-k8s
  namespace: default
  labels:
    app: demo-nb-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nb-k8s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-nb-k8s
    spec:
      containers:
      - image: ghcr.io/netbirdio/kubernetes-demo
        imagePullPolicy: Always
        name: demo

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nb-k8s
  namespace: default
  labels:
    app: demo-nb-k8s
spec:
  type: ClusterIP
  selector:
    app: demo-nb-k8s
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
